src/common/frozen_api/tests/ui/errors/missing_derive.stderr
error: ⚠️  BREAKING CHANGE DETECTED: 'Application' modified (or its FrozenAPI dependencies)
       Expected: dummy | Actual: dbfc66fc
       Fix: Update hash to 'dbfc66fc' if change is intentional
       Impact: Serialization compatibility may break
  --> tests/ui/errors/missing_derive.rs:31:1
   |
31 | #[frozen_api("dummy")]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `frozen_api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `__FROZEN_API_HASH` found for struct `BadService` in the current scope
  --> tests/ui/errors/missing_derive.rs:31:1
   |
25 | struct BadService {
   | ----------------- associated item `__FROZEN_API_HASH` not found for this struct
...
31 | #[frozen_api("dummy")]
   | ^^^^^^^^^^^^^^^^^^^^^^ associated item not found in `BadService`
   |
   = note: this error originates in the attribute macro `frozen_api` (in Nightly builds, run with -Z macro-backtrace for more info)
